--- a/css/footer.css
+++ b/css/footer.css
@@ -18,3 +18,13 @@ footer p {
 footer span {
   font-weight: 700;
 }
+
+.services .pre-title {
+    margin: 0 auto;
+}
+
+.services-title {
+    margin: 0.2rem 0 1rem;
+    font-size: 2rem;
+    text-align: center;
+}
